--- a/templates/admin/judge/contest/change_form.html
+++ b/templates/admin/judge/contest/change_form.html
@@ -3,16 +3,16 @@
 
 {% block extrahead %}{{ block.super }}
     <script>
-        django.jQuery(function ($) {
+        django.jQuery(($) => {
             $('.rerate-link').appendTo('div#bottombar').show();
-            $('.rejudge-link').click(function () {
-                return confirm('{{ _('Are you sure you want to rejudge ALL the submissions?') }}');
+            $('.rejudge-link').click(() => {
+                return confirm("{{ _('Are you sure you want to rejudge ALL the submissions?') }}");
             });
-            $('.rescore-link').click(function () {
-                return confirm('{{ _('Are you sure you want to rescore ALL the submissions?') }}');
+            $('.rescore-link').click(() => {
+                return confirm("{{ _('Are you sure you want to rescore ALL the submissions?') }}");
             });
-            $('.resend-link').click(function () {
-                return confirm('{{ _('Are you sure you want to resend this announcement?') }}');
+            $('.resend-link').click(() => {
+                return confirm("{{ _('Are you sure you want to resend this announcement?') }}");
             });
         });
     </script>
