--- a/templates/admin/judge/judge/change_form.html
+++ b/templates/admin/judge/judge/change_form.html
@@ -3,7 +3,7 @@
 
 {% block extrahead %}{{ block.super }}
     <script>
-        django.jQuery(function ($) {
+        django.jQuery(($) => {
             $('.disconnect-link').appendTo('div#bottombar').show();
             $('.terminate-link').appendTo('div#bottombar').show();
             $('.disable-link').appendTo('div#bottombar').show();
