--- a/templates/contest/tag-title.html
+++ b/templates/contest/tag-title.html
@@ -1,5 +1,5 @@
 <h2 style="display:inline">
-    <span style="background-color: {{ tag.color }}; color: {{ tag.text_color }}" class="contest-tag">
+    <span style="background-color: '{{ tag.color }}'; color: '{{ tag.text_color }}'" class="contest-tag">
         {{- tag.name -}}
     </span>
 </h2>
