--- a/templates/admin/judge/profile/change_form.html
+++ b/templates/admin/judge/profile/change_form.html
@@ -3,7 +3,7 @@
 
 {% block extrahead %}{{ block.super }}
     <script>
-        django.jQuery(function ($) {
+        django.jQuery(($) => {
             $('.userlink').appendTo('div#bottombar').show();
         });
     </script>
