--- a/templates/base.html
+++ b/templates/base.html
@@ -11,28 +11,28 @@
     {% endif %}
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicons-->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/resources/icons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/resources/icons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/resources/icons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/resources/icons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/resources/icons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/resources/icons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/resources/icons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/resources/icons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="/resources/icons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/resources/icons/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/resources/icons/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/resources/icons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/resources/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#231F20">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="/resources/icons/mstile-144x144.png">
     {# Chrome 39 for Android colour #}
     <meta name="theme-color" content="#231F20">
     {% if og_image %}
         <meta property="og:image" content="{{ request.build_absolute_uri(og_image) }}">
     {% else %}
-        <meta property="og:image" content="{{ request.build_absolute_uri("/logo.png") }}">
+        <meta property="og:image" content='{{ request.build_absolute_uri("/logo.png") }}'>
     {% endif %}
     {% block og_title %}{% endblock %}
     <meta property="og:site_name" content="{{ SITE_LONG_NAME }}">
@@ -55,10 +55,10 @@
         {% else %}
             <link rel="stylesheet" href="{{ static(LIGHT_STYLE_CSS) }}">
         {% endif %}
-        {% if INLINE_FONTAWESOME %}<link rel="stylesheet" href="{{ static('libs/fontawesome/font-awesome.css') }}">{% endif %}
-        <link rel="stylesheet" href="{{ static('source_sans_pro.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ static('libs/clipboard/tooltip.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ static('libs/select2/select2.css') }}">
+        {% if INLINE_FONTAWESOME %}<link rel="stylesheet" href="/resources/prebundled/fontawesome/font-awesome.css">{% endif %}
+        <link rel="stylesheet" href="/resources/source_sans_pro.css">
+        <link rel="stylesheet" type="text/css" href="/resources/prebundled/clipboard/tooltip.css">
+        <link rel="stylesheet" type="text/css" href="/resources/prebundled/select2/select2.css">
     {% endcompress %}
     <link rel="canonical"
           href="{{ DMOJ_SCHEME }}://{{ DMOJ_CANONICAL|default(site.domain) }}{{ request.get_full_path() }}">
@@ -77,19 +77,19 @@
     {% compress js %}
         <script>{{ inlinei18n(LANGUAGE_CODE)|safe }}</script>
         {% if INLINE_JQUERY %}
-            <script src="{{ static('libs/jquery-3.4.1.min.js') }}"></script>
+            <script src="/resources/prebundled/jquery-3.4.1.min.js"></script>
         {% endif %}
-        <script src="{{ static('libs/jquery-cookie.js') }}"></script>
-        <script src="{{ static('libs/jquery-taphold.js') }}"></script>
-        <script src="{{ static('libs/jquery.unveil.js') }}"></script>
-        <script src="{{ static('libs/moment.js') }}"></script>
-        <script src="{{ static('libs/select2/select2.js') }}"></script>
+        <script type="module" src="/resources/prebundled/jquery-cookie.js"></script>
+        <script src="/resources/prebundled/jquery-taphold.js"></script>
+        <script src="/resources/prebundled/jquery.unveil.js"></script>
+        <script src="/resources/prebundled/moment.js"></script>
+        <script type="module" src="/resources/prebundled/select2/select2.js"></script>
         {% include "extra_js.html" %}
-        <script src="{{ static('common.js') }}"></script>
-        <script src="{{ static('event.js') }}"></script>
+        <script src="/resources/common.js"></script>
+        <script src="/resources/event.js"></script>
         <script>
             moment.locale('{{ LANGUAGE_CODE }}');
-            $(function () {
+            $(() => {
                 $('img.unveil').unveil(200);
             });
         </script>
@@ -100,68 +100,74 @@
             window.event_dispatcher = new WSEventDispatcher(
                 '{{ EVENT_DAEMON_LOCATION }}',
                 '{{ EVENT_DAEMON_POLL_LOCATION }}',
-                {{ EVENT_LAST_MSG }}
+                JSON.parse('{{ EVENT_LAST_MSG }}')
             );
         </script>
     {% endif %}
     {% if request.in_contest %}
-        <script>$(function () {
-            count_down($("#contest-time-remaining"));
+        <script 
+            type="module" 
+            data-should-push="{{ EVENT_LAST_MSG and request.participation.contest.push_announcements and request.participation.virtual <= 0 }}"
+        >
+            $(() => {
+                count_down($("#contest-time-remaining"));
 
-            var selected = null,
-                x_pos = 0, y_pos = 0,
-                x_elem = 0, y_elem = 0;
+                var selected = null,
+                    x_pos = 0, y_pos = 0,
+                    x_elem = 0, y_elem = 0;
 
-            $('#contest-info').mousedown(function () {
-                selected = $(this);
-                x_elem = x_pos - selected.offset().left;
-                y_elem = y_pos - (selected.offset().top - $(window).scrollTop());
-                return false;
-            });
-
-            if (localStorage.getItem("contest_timer_pos")) {
-                data = localStorage.getItem("contest_timer_pos").split(":");
-                $("#contest-info").css({
-                    left: data[0],
-                    top: data[1]
+                $('#contest-info').mousedown(() => {
+                    selected = $(this);
+                    x_elem = x_pos - selected.offset().left;
+                    y_elem = y_pos - (selected.offset().top - $(window).scrollTop());
+                    return false;
                 });
-            }
 
-            $("#contest-info").show();
-
-            $(document).mousemove(function (e) {
-                x_pos = e.screenX;
-                y_pos = e.screenY;
-                x_pos = Math.max(Math.min(x_pos, window.innerWidth), 0);
-                y_pos = Math.max(Math.min(y_pos, window.innerHeight), 0);
-
-                if (selected !== null) {
-                    left_px = (x_pos - x_elem) + 'px';
-                    top_px = (y_pos - y_elem) + 'px';
-
-                    localStorage.setItem("contest_timer_pos", left_px + ":" + top_px);
-
-                    selected.css({
-                        left: left_px,
-                        top: top_px
+                if (localStorage.getItem("contest_timer_pos")) {
+                    data = localStorage.getItem("contest_timer_pos").split(":");
+                    $("#contest-info").css({
+                        left: data[0],
+                        top: data[1]
                     });
                 }
-            });
 
-            $(document).mouseup(function () {
-                selected = null;
-            })
+                $("#contest-info").show();
 
-            {# Virtual = 0 is live participation, virtual = -1 is spectating #}
-            {% if EVENT_LAST_MSG and request.participation.contest.push_announcements and request.participation.virtual <= 0 %}
-                $(function () {
-                    event_dispatcher.auto_reconnect = true;
-                    event_dispatcher.on('contest_{{ request.participation.contest.id_secret }}', function (data) {
-                        alert(data.title + '\n\n' + data.message);
-                    });
+                $(document).mousemove((e) => {
+                    x_pos = e.screenX;
+                    y_pos = e.screenY;
+                    x_pos = Math.max(Math.min(x_pos, window.innerWidth), 0);
+                    y_pos = Math.max(Math.min(y_pos, window.innerHeight), 0);
+
+                    if (selected !== null) {
+                        left_px = (x_pos - x_elem) + 'px';
+                        top_px = (y_pos - y_elem) + 'px';
+
+                        localStorage.setItem("contest_timer_pos", left_px + ":" + top_px);
+
+                        selected.css({
+                            left: left_px,
+                            top: top_px
+                        });
+                    }
+                });
+
+                $(document).mouseup(() => {
+                    selected = null;
                 })
-            {% endif %}
-        });
+
+                // Virtual = 0 is live participation, virtual = -1 is spectating
+                const shouldPush = document.currentScript.dataset.shouldPush === "True";
+
+                if (shouldPush) {
+                    $(() => {
+                        event_dispatcher.auto_reconnect = true;
+                        event_dispatcher.on('contest_{{ request.participation.contest.id_secret }}', (data) => {
+                            alert(data.title + '\n\n' + data.message);
+                        });
+                    })
+                }
+            });
         </script>
     {% endif %}
 
@@ -264,10 +270,10 @@
                 </span>
             </a>
             <a id="flag_vi" href="#" onclick="submmit_language('vi')" style="margin-right: 5px; margin-top: 4px;">
-                <img src="{{ static('icons/vi_flag.svg') }}" alt="VI" height="24">
+                <img src="/resources/icons/vi_flag.svg" alt="VI" height="24">
             </a>
             <a id="flag_en" href="#" onclick="submmit_language('en')" style="margin-right: 5px; margin-top: 4px;">
-                <img src="{{ static('icons/gb_flag.svg') }}" alt="EN" height="24">
+                <img src="/resources/icons/gb_flag.svg" alt="EN" height="24">
             </a>
             {% if request.user.is_authenticated %}
                 <ul>
