--- a/templates/blog/edit.html
+++ b/templates/blog/edit.html
@@ -2,10 +2,11 @@
 
 {% block js_media %}
     {% include "leave-warning.html" %}
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script>
+    <script type="module">
+        import flatpickr from "flatpickr";
+
         // This code activates flatpickr on fields with the 'datetimefield' class when the document has loaded
-        window.addEventListener("DOMContentLoaded", function () {
+        window.addEventListener("DOMContentLoaded", () => {
             flatpickr(".datetimefield", {
                 enableTime: true,
                 enableSeconds: true,
@@ -14,9 +15,9 @@
             });
         });
 
-        $(function () {
-            $('#delete-button').click(function () {
-                return confirm('{{ _('Are you sure you want to delete this blog post?') }}');
+        $(() => {
+            $('#delete-button').click(()=> {
+                return confirm("{{ _('Are you sure you want to delete this blog post?') }}");
             });
         });
     </script>
@@ -26,7 +27,7 @@
 {% block media %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     {{ form.media.css }}
-    <link rel="stylesheet" type="text/css" href="{{ static('ui_form.css') }}">
+    <link rel="stylesheet" type="text/css" href="/resources/ui_form.css">
 {% endblock %}
 
 {% block body %}
