--- a/templates/blog/media-js.html
+++ b/templates/blog/media-js.html
@@ -1,7 +1,8 @@
-<script src="{{ static('libs/featherlight/featherlight.min.js') }}" type="text/javascript"></script>
 {% compress js %}
-    <script type="text/javascript">
-        $(document).ready(function () {
+    <script type="module">
+        import "$prebundled/featherlight/featherlight.min.js";
+        
+        $(document).ready(() => {
             function ajax_vote(url, id, delta, on_success) {
                 return $.ajax({
                     url: url,
@@ -9,19 +10,19 @@
                     data: {
                         id: id
                     },
-                    success: function (data, textStatus, jqXHR) {
+                    success(data, textStatus, jqXHR) {
                         var score = $('#post-' + id + ' #post-score').first();
                         score.text(parseInt(score.text()) + delta);
                         if (typeof on_success !== 'undefined')
                             on_success();
                     },
-                    error: function (data, textStatus, jqXHR) {
+                    error(data, textStatus, jqXHR) {
                         alert('Could not vote: ' + data.responseText);
                     }
                 });
             }
 
-            var get_$votes = function (id) {
+            function get_$votes(id) {
                 var $post = $('#post-' + id);
                 return {
                     upvote: $post.find('.upvote-link').first(),
@@ -29,8 +30,8 @@
                 };
             };
 
-            window.blog_upvote = function (id) {
-                ajax_vote('{{ url('blog_upvote') }}', id, 1, function () {
+            window.blog_upvote = (id) => {
+                ajax_vote("{{ url('blog_upvote') }}", id, 1, () => {
                     var $votes = get_$votes(id);
                     if ($votes.downvote.hasClass('voted'))
                         $votes.downvote.removeClass('voted');
@@ -39,8 +40,8 @@
                 });
             };
 
-            window.blog_downvote = function (id) {
-                ajax_vote('{{ url('blog_downvote') }}', id, -1, function () {
+            window.blog_downvote = (id) => {
+                ajax_vote("{{ url('blog_downvote') }}", id, -1, () => {
                     var $votes = get_$votes(id);
                     if ($votes.upvote.hasClass('voted'))
                         $votes.upvote.removeClass('voted');
