--- a/templates/common-content.html
+++ b/templates/common-content.html
@@ -6,45 +6,46 @@
 
 {% block js_media %}
     {% compress js %}
-        <script src="{{ static('libs/clipboard/clipboard.js') }}"></script>
-        <script src="{{ static('libs/clipboard/tooltip.js') }}"></script>
-        <script type="text/javascript">
-            $(function () {
-                var info_float = $('.info-float');
+        <script type="module">
+            import "$prebundled/clipboard/clipboard.js";
+            import "$prebundled/clipboard/tooltip.js";
+
+            $(() => {
+                const info_float = $('.info-float');
                 if (info_float.length) {
-                    var container = $('#content-right');
+                    const container = $('#content-right');
                     if (!featureTest('position', 'sticky')) {
                         fix_div(info_float, 55);
-                        $(window).resize(function () {
+                        $(window).resize(() => {
                             info_float.width(container.width());
                         });
                         info_float.width(container.width());
                     }
                 }
 
-                window.add_code_copy_buttons = function ($container) {
-                    $container.find('pre code').each(function () {
-                        var copyButton;
+                window.add_code_copy_buttons = ($container) => {
+                    $container.find('pre code').each(() => {
+                        let copyButton;
                         $(this).parent().before($('<div>', {'class': 'copy-clipboard'})
                             .append(copyButton = $('<span>', {
                                 'class': 'btn-clipboard',
                                 'data-clipboard-text': $(this).text(),
-                                'title': '{{ _('Click to copy') }}'
-                            }).text('{{ _('Copy') }}')));
+                                'title': "{{ _('Click to copy') }}"
+                            }).text("{{ _('Copy') }}")));
 
-                        $(copyButton.get(0)).mouseleave(function () {
+                        $(copyButton.get(0)).mouseleave(() => {
                             $(this).attr('class', 'btn-clipboard');
                             $(this).removeAttr('aria-label');
                         });
 
-                        var curClipboard = new Clipboard(copyButton.get(0));
+                        const curClipboard = new Clipboard(copyButton.get(0));
 
-                        curClipboard.on('success', function (e) {
+                        curClipboard.on('success', (e) => {
                             e.clearSelection();
-                            showTooltip(e.trigger, '{{ _('Copied!') }}');
+                            showTooltip(e.trigger, "{{ _('Copied!') }}");
                         });
 
-                        curClipboard.on('error', function (e) {
+                        curClipboard.on('error', (e) => {
                             showTooltip(e.trigger, fallbackMessage(e.action));
                         });
                     });
