--- a/templates/contest/media-js.html
+++ b/templates/contest/media-js.html
@@ -1,26 +1,33 @@
-<script type="text/javascript">
+<script 
+    type="module" 
+    data-official-contest-mode="{{ request.official_contest_mode }}" 
+    data-in-contest="{{ request.in_contest }}"
+>
     $(function () {
+        const officialContestMode = document.currentScript.dataset.officialContestMode === "True";
+        const inContest = document.currentScript.dataset.inContest === "True";
+
         $('.leaving-forever').click(function () {
-            return confirm('{{ _('Are you sure you want to leave?') }}\n' +
-                '{{ _('You cannot come back to a virtual participation. You will have to start a new one.') }}');
+            return confirm("{{ _('Are you sure you want to leave?') }}\n" +
+                "{{ _('You cannot come back to a virtual participation. You will have to start a new one.') }}");
         });
 
-        {% if not request.official_contest_mode %}
+        if (!officialContestMode) {
             $('.first-join').click(function () {
-                return confirm('{{ _('Are you sure you want to join?') }}\n' +
-                    '{{ _('Joining a contest starts your timer, after which it becomes unstoppable.') }}');
+                return confirm("{{ _('Are you sure you want to join?') }}\n" +
+                    "{{ _('Joining a contest starts your timer, after which it becomes unstoppable.') }}");
             });
-        {% endif %}
+        }
 
-        {% if request.in_contest %}
+        if (inContest) {
             $('.contest-join').click(function () {
-                return confirm('{{ _('Are you sure you want to join?') }}\n' +
-                    '{{ _('Joining this contest will leave %(contest)s.', contest=request.participation.contest.name) }}');
+                return confirm("{{ _('Are you sure you want to join?') }}\n" +
+                    "{{ _('Joining this contest will leave %(contest)s.', contest=request.participation.contest.name) }}");
             });
-        {% endif %}
+        }
 
         $('.register-warning').click(function () {
-            return confirm('{{ _('Are you sure you want to register?') }}');
+            return confirm("{{ _('Are you sure you want to register?') }}");
         });
     });
 </script>
