--- a/templates/mathjax-load.html
+++ b/templates/mathjax-load.html
@@ -1,8 +1,9 @@
-<script type="text/javascript" src="{{ static('mathjax_config.js') }}"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-chtml.min.js"></script>
-<script type="text/javascript">
-    MathJax.typesetPromise().then(function () {
-        $('.tex-image').hide();
-        $('.tex-text').show();
+<script type="module">
+    import "$resources/mathjax_config.js";
+    import "mathjax/es5/tex-chtml.js";
+
+    MathJax.typesetPromise().then(() => {
+        $(".tex-image").hide();
+        $(".tex-text").show();
     });
 </script>
