--- a/templates/problem/editor.html
+++ b/templates/problem/editor.html
@@ -4,34 +4,39 @@
     {{ form.media.js }}
     {% include "leave-warning.html" %}
 
-    <script src="{{ static('vnoj/jquery.formset.js') }}"></script>
+    <script
+        type="module"
+        data-lang-limit-formset="{{ lang_limit_formset }}"
+    >
+        import "$vnoj/jquery.formset.js";
 
-    <script>
-        $(function() {
-            {% if lang_limit_formset %}
+        const langLimitFormset = document.currentScript.dataset.langLimitFormset === "True";
+
+        $(() => {
+            if (langLimitFormset) {
                 $('#form_set tr').formset({
                     prefix: '{{ lang_limit_formset.prefix }}'
                 });
 
-            $('#lang_limit_title').click(function() {
-                $('#lang_limit_title i').toggleClass('fa-caret-down fa-caret-up');
-                $('#lang_limit_table').toggleClass('hidden');
-            });
-            $('#lang_limit_title').click();
-            {% endif %}
+                $('#lang_limit_title').click(() => {
+                    $('#lang_limit_title i').toggleClass('fa-caret-down fa-caret-up');
+                    $('#lang_limit_table').toggleClass('hidden');
+                });
+                $('#lang_limit_title').click();
+            }
 
-            var noResults = function () {
-                return '{{ _('Press Enter to select multiple users...') }}';
+            function noResults() {
+                return "{{ _('Press Enter to select multiple users...') }}";
             };
 
-            $(document).one('click', '#id_testers + .select2', function (e) {
+            $(document).one('click', '#id_testers + .select2', (e) => {
                 $('#id_testers').data().select2.options.get('translations').dict['noResults'] = noResults;
             });
 
-            $(document).on('keyup', '#id_testers + .select2 .select2-search__field', function (e) {
+            $(document).on('keyup', '#id_testers + .select2 .select2-search__field', (e) => {
                 if (e.keyCode === 13) {
-                    var $id_testers = $('#id_testers');
-                    var testers = $(this).val().split(/[\s,]+/);
+                    const $id_testers = $('#id_testers');
+                    const testers = $(this).val().split(/[\s,]+/);
                     if (testers.length <= 1) {
                         // Skip to let select2 handle this
                         return;
@@ -43,7 +48,7 @@
                         data: {
                             multiple_terms: testers,
                         },
-                        success: function (response) {
+                        success(response) {
                             for (const tester of response.results) {
                                 $id_testers.select2('trigger', 'select', {
                                     data: tester,
@@ -59,7 +64,7 @@
 
 {% block media %}
     {{ form.media.css }}
-    <link rel="stylesheet" type="text/css" href="{{ static('ui_form.css') }}">
+    <link rel="stylesheet" type="text/css" href="/resources/ui_form.css">
     <style>
         .hidden {
             display: none;
