--- a/templates/problem/list.html
+++ b/templates/problem/list.html
@@ -16,18 +16,19 @@
 {% endblock %}
 
 {% block js_media %}
+    {{ point_values|json_script:"point-values" }}
     <script>
-        window.point_start = {{point_start}};
-        window.point_end = {{point_end}};
-        window.point_values = {{point_values|json|safe}};
+        window.point_start = Number("{{point_start}}");
+        window.point_end = Number("{{point_end}}");
+        window.point_values = JSON.parse(document.getElementById("point-values").textContent);
     </script>
     {% compress js %}
         <script src="{{ static('libs/nouislider.min.js') }}" type="text/javascript"></script>
         <script>
-            $(function () {
-                var $form = $('form#filter-form');
-                var $search = $('#search');
-                var $category = $('#category');
+            $(() => {
+                const $form = $('form#filter-form');
+                const $search = $('#search');
+                const $category = $('#category');
 
                 function prep_form() {
                     // disable point range when searching
@@ -47,25 +48,25 @@
                 }).css({'visibility': 'visible'}).change(clean_submit);
                 $('#types').select2({
                     theme: '{{ DMOJ_SELECT2_THEME }}',
-                    multiple: 1, placeholder: '{{ _('Filter by type...') }}'
+                    multiple: 1, placeholder: "{{ _('Filter by type...') }}"
                 }).css({'visibility': 'visible'});
 
                 // This is incredibly nasty to do but it's needed because otherwise the select2 steals the focus
-                $search.keypress(function (e) {
+                $search.keypress((e) => {
                     if (e.keyCode == 13)
                         $('#go').click();
                 });
 
-                $('#random').click(function (e) {
+                $('#random').click((e) => {
                     var action = $form.attr('action');
-                    $form.attr('action', '{{ url('problem_random') }}').attr('target', '_blank').submit();
+                    $form.attr('action', "{{ url('problem_random') }}").attr('target', '_blank').submit();
                     $form.attr('action', action).attr('target', '');
                     e.preventDefault();
                 });
 
                 $('#go').click(clean_submit);
 
-                $('input#full_text, input#hide_solved, input#show_types, input#has_public_editorial').click(function () {
+                $('input#full_text, input#hide_solved, input#show_types, input#has_public_editorial').click(() => {
                     prep_form();
                     ($('<form>').attr('action', window.location.pathname + '?' + $form.serialize())
                         .append($('<input>').attr('type', 'hidden').attr('name', 'csrfmiddlewaretoken')
@@ -73,28 +74,28 @@
                         .attr('method', 'POST').appendTo($('body')).submit());
                 });
 
-                var info_float = $('.info-float');
-                var container = $('#content-right');
+                const info_float = $('.info-float');
+                const container = $('#content-right');
                 if (!featureTest('position', 'sticky')) {
                     fix_div(info_float, 55);
-                    $(window).resize(function () {
+                    $(window).resize(() => {
                         info_float.width(container.width());
                     });
                     info_float.width(container.width());
                 }
 
-                var intFormatter = {
-                    to: function (value) {
+                const intFormatter = {
+                    to(value) {
                         return value;
                     },
-                    from: function (value) {
+                    from(value) {
                         return +value;
                     }
                 };
-                var $slider = $('#point-slider');
+                const $slider = $('#point-slider');
                 if ($slider.length) {
-                    var $start = $('#point-start');
-                    var $end = $('#point-end');
+                    const $start = $('#point-start');
+                    const $end = $('#point-end');
 
                     noUiSlider.create($slider[0], {
                         start: [point_start, point_end],
@@ -102,7 +103,7 @@
                         snap: true,
                         tooltips: [intFormatter, intFormatter],
                         range: point_values
-                    }).on('change', function (values) {
+                    }).on('change', (values) => {
                         var start = +values[0], end = +values[1];
                         $start.prop('disabled', start === point_values.min).val(start);
                         $end.prop('disabled', end === point_values.max).val(end);
