--- a/templates/problem/manage_submission.html
+++ b/templates/problem/manage_submission.html
@@ -51,46 +51,46 @@
 {% block js_media %}
     {{ form_compare.media.js }}
     <script>
-        $(function () {
+        $(() => {
             $('#by-lang-filter').select2({
                 theme: '{{ DMOJ_SELECT2_THEME }}',
                 multiple: true,
-                placeholder: '{{ _('Leave empty to not filter by language') }}'
+                placeholder: "{{ _('Leave empty to not filter by language') }}"
             });
 
             $('#by-result-filter').select2({
                 theme: '{{ DMOJ_SELECT2_THEME }}',
                 multiple: true,
-                placeholder: '{{ _('Leave empty to not filter by result') }}'
+                placeholder: "{{ _('Leave empty to not filter by result') }}"
             });
 
-            $('#rescore-all').click(function (e) {
+            $('#rescore-all').click((e) => {
                 e.preventDefault();
                 if (confirm(this.dataset.warning)) {
                     $(this).parents('form').submit();
                 }
             });
 
-            $('#compare').click(function (e) {
+            $('#compare').click((e) => {
                 e.preventDefault();
-                var usernames = $("#id_user option:selected").toArray().map(item => item.text);
+                const usernames = $("#id_user option:selected").toArray().map(item => item.text);
                 if (usernames.length === 0) {
-                    alert('{{ _('Please select at least one user.') }}');
+                    alert("{{ _('Please select at least one user.') }}");
                     return;
                 }
 
-                var qs = usernames.map(item => 'username=' + item).join('&');
-                window.location.href = '{{ url('problem_submission_diff', problem.code) }}?' + qs;
+                const qs = usernames.map(item => 'username=' + item).join('&');
+                window.location.href = "{{ url('problem_submission_diff', problem.code) }}?" + qs;
             });
 
-            var $use_id = $('#by-range-check');
-            var $id_start = $('#by-range-start');
-            var $id_end = $('#by-range-end');
-            $('#rejudge-selected').click(function (e) {
+            const $use_id = $('#by-range-check');
+            const $id_start = $('#by-range-start');
+            const $id_end = $('#by-range-end');
+            $('#rejudge-selected').click((e) => {
                 e.preventDefault();
                 if ($use_id.prop('checked')) {
-                    var start = parseInt($id_start.val());
-                    var end = parseInt($id_end.val());
+                    const start = parseInt($id_start.val());
+                    const end = parseInt($id_end.val());
                     if (!start || !end) {
                         alert("{{ _('Need valid values for both start and end IDs.') }}");
                         return;
@@ -100,22 +100,22 @@
                     }
                 }
 
-                var $form = $(this).parents('form');
-                $.post('{{ url('problem_submissions_rejudge_preview', problem.code) }}', $form.serialize(), 'text')
-                    .done(function (count) {
+                const $form = $(this).parents('form');
+                $.post("{{ url('problem_submissions_rejudge_preview', problem.code) }}", $form.serialize(), 'text')
+                    .done((count) => {
                         if (confirm("{{ _('You are about to rejudge {count} submissions. Are you sure you want to do this?') }}"
                             .replace('{count}', count))) {
                             $form.submit();
                         }
                     })
-                    .fail(function () {
+                    .fail(() => {
                         if (confirm("{{ _('You are about to rejudge a few submissions. Are you sure you want to do this?') }}")) {
                             $form.submit();
                         }
                     });
             });
 
-            $use_id.change(function () {
+            $use_id.change(() => {
                 $('#by-range-filter').find('input').prop('disabled', !this.checked);
             });
         });
