--- a/templates/problem/search-form.html
+++ b/templates/problem/search-form.html
@@ -69,10 +69,10 @@
         </form>
 
         <script>
-            var my_options = $("#types option");
-            var selected = $("#types").val();
+            const my_options = $("#types option");
+            const selected = $("#types").val();
 
-            my_options.sort(function(a,b) {
+            my_options.sort((a,b) => {
                 return a.text.localeCompare(b.text, 'vi');
             })
 
