--- a/templates/stats/media-js.html
+++ b/templates/stats/media-js.html
@@ -1,8 +1,9 @@
-<script type="text/javascript" src="{{ static('libs/chart.js/Chart.js') }}"></script>
-<script type="text/javascript">
+<script type="module">
+    import "$prebundled/chart.js/Chart.js";
+
     function draw_pie_chart(data, $chart) {
-        var ctx = $chart.find('canvas')[0].getContext('2d');
-        var chart = new Chart(ctx, {
+        const ctx = $chart.find('canvas')[0].getContext('2d');
+        const chart = new Chart(ctx, {
             type: 'pie',
             data: data,
             options: {
@@ -22,10 +23,10 @@
     }
 
     function draw_bar_chart(data, $chart, show_percentage = true) {
-        var orig_data = JSON.parse(JSON.stringify(data));
-        var ctx = $chart.find('canvas')[0].getContext('2d');
+        const orig_data = JSON.parse(JSON.stringify(data));
+        const ctx = $chart.find('canvas')[0].getContext('2d');
         ctx.canvas.height = 20 * data.labels.length + 100;
-        var chart = new Chart(ctx, {
+        const chart = new Chart(ctx, {
             type: 'horizontalBar',
             data: data,
             options: {
@@ -35,7 +36,7 @@
                 },
                 tooltips: {
                     callbacks: {
-                        label: function(tooltipItem, data) {
+                        label(tooltipItem, data) {
                             return show_percentage ? ((Math.round(tooltipItem.value * 100) / 100) + '%') : tooltipItem.value;
                         },
                     },
@@ -47,7 +48,7 @@
                         },
                     }],
                 },
-                onClick: function (e) {
+                onClick(e) {
                     let nearest = chart.getElementsAtEventForMode(e, 'nearest', {intersect: false, axis: 'y'});
                     if (nearest.length) {
                         var bar = nearest[0];
@@ -63,8 +64,8 @@
     }
 
     function draw_vertical_bar_chart(data, $chart) {
-        var ctx = $chart.find('canvas')[0].getContext('2d');
-        var chart = new Chart(ctx, {
+        const ctx = $chart.find('canvas')[0].getContext('2d');
+        const chart = new Chart(ctx, {
             type: 'bar',
             data: data,
             options: {
@@ -85,9 +86,9 @@
     }
 
     function draw_stacked_bar_chart(data, $chart) {
-        var ctx = $chart.find('canvas')[0].getContext('2d');
+        const ctx = $chart.find('canvas')[0].getContext('2d');
         ctx.canvas.height = 20 * data.labels.length + 100;
-        var chart = new Chart(ctx, {
+        const chart = new Chart(ctx, {
             type: 'horizontalBar',
             data: data,
             options: {
@@ -96,9 +97,9 @@
                     mode: 'index',
                     intersect: false,
                     callbacks: {
-                        footer: function(tooltipItems) {
-                            var total = 0;
-                            for (var i = 0; i < tooltipItems.length; ++i) {
+                        footer(tooltipItems) {
+                            let total = 0;
+                            for (let i = 0; i < tooltipItems.length; ++i) {
                                 total += tooltipItems[i].xLabel;
                             }
                             return 'Total: ' + total;
@@ -107,22 +108,22 @@
                 },
                 legend: {
                     labels: {
-                        generateLabels: function(chart) {
-                            var data = chart.data;
+                        generateLabels(chart) {
+                            const data = chart.data;
                             if (!Array.isArray(data.datasets)) {
                                 return [];
                             }
 
-                            var total = 0;
-                            data.datasets.forEach(function(dataset, i) {
+                            let total = 0;
+                            data.datasets.forEach((dataset, i) => {
                                 if (chart.isDatasetVisible(i)) {
-                                    total += dataset.data.reduce(function(a, b) {
+                                    total += dataset.data.reduce((a, b) => {
                                         return a + b;
                                     }, 0);
                                 }
                             });
 
-                            var labels = data.datasets.map(function(dataset, i) {
+                            const labels = data.datasets.map((dataset, i) => {
                                 return {
                                     text: dataset.label,
                                     fillStyle: (!Array.isArray(dataset.backgroundColor) ? dataset.backgroundColor : dataset.backgroundColor[0]),
@@ -148,11 +149,11 @@
                             return labels;
                         },
                     },
-                    onClick: function(e, legendItem) {
-                        var index = legendItem.datasetIndex;
+                    onClick(e, legendItem) {
+                        const index = legendItem.datasetIndex;
                         if (index == -1) return;
-                        var ci = this.chart;
-                        var meta = ci.getDatasetMeta(index);
+                        const ci = this.chart;
+                        const meta = ci.getDatasetMeta(index);
 
                         meta.hidden = meta.hidden === null ? !ci.data.datasets[index].hidden : null;
 
@@ -176,9 +177,9 @@
     }
 
     function draw_vertical_stacked_bar_chart(data, $chart, display_y_right_axis = false) {
-        var ctx = $chart.find('canvas')[0].getContext('2d');
+        const ctx = $chart.find('canvas')[0].getContext('2d');
         ctx.canvas.height = 20 * data.labels.length + 100;
-        var chart = new Chart(ctx, {
+        const chart = new Chart(ctx, {
             type: 'bar',
             data: data,
             options: {
@@ -187,9 +188,9 @@
                     mode: 'index',
                     intersect: false,
                     callbacks: {
-                        footer: function(tooltipItems) {
-                            var total = 0;
-                            for (var i = 0; i < tooltipItems.length; ++i) {
+                        footer(tooltipItems) {
+                            let total = 0;
+                            for (let i = 0; i < tooltipItems.length; ++i) {
                                 total += tooltipItems[i].yLabel;
                             }
                             return 'Total: ' + total;
@@ -198,22 +199,22 @@
                 },
                 legend: {
                     labels: {
-                        generateLabels: function(chart) {
-                            var data = chart.data;
+                        generateLabels(chart) {
+                            const data = chart.data;
                             if (!Array.isArray(data.datasets)) {
                                 return [];
                             }
 
-                            var total = 0;
-                            data.datasets.forEach(function(dataset, i) {
+                            let total = 0;
+                            data.datasets.forEach((dataset, i) => {
                                 if (chart.isDatasetVisible(i)) {
-                                    total += dataset.data.reduce(function(a, b) {
+                                    total += dataset.data.reduce((a, b) => {
                                         return a + b;
                                     }, 0);
                                 }
                             });
 
-                            var labels = data.datasets.map(function(dataset, i) {
+                            const labels = data.datasets.map((dataset, i) => {
                                 return {
                                     text: dataset.label,
                                     fillStyle: (!Array.isArray(dataset.backgroundColor) ? dataset.backgroundColor : dataset.backgroundColor[0]),
@@ -239,11 +240,11 @@
                             return labels;
                         },
                     },
-                    onClick: function(e, legendItem) {
-                        var index = legendItem.datasetIndex;
+                    onClick(e, legendItem) {
+                        const index = legendItem.datasetIndex;
                         if (index == -1) return;
-                        var ci = this.chart;
-                        var meta = ci.getDatasetMeta(index);
+                        const ci = this.chart;
+                        const meta = ci.getDatasetMeta(index);
 
                         meta.hidden = meta.hidden === null ? !ci.data.datasets[index].hidden : null;
 
