--- a/templates/status/media-js.html
+++ b/templates/status/media-js.html
@@ -1,57 +1,58 @@
-<script src="{{ static('libs/tablesorter.js') }}" type="text/javascript"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        var table = $("#judge-status");
+<script type="module">
+    import "$prebundled/tablesorter.js";
+
+    $(document).ready(() => {
+        const table = $("#judge-status");
         table.tablesorter();
 
-        var tooltip_classes = 'tooltipped tooltipped-w';
-        var active_judge = null;
-        var active_lang = null;
+        const tooltip_classes = 'tooltipped tooltipped-w';
+        let active_judge = null;
+        let active_lang = null;
 
         function display_tooltip(where) {
             where.addClass(tooltip_classes).attr('aria-label', where.attr('data-runtime-info'));
         }
 
         function install_tooltips() {
-            $('.runtime-label').each(function () {
-                var link = $(this);
-                link.mouseenter(function (e) {
+            $('.runtime-label').each(() => {
+                const link = $(this);
+                link.mouseenter((e) => {
                     active_judge = link.attr('data-judge');
                     active_lang = link.attr('data-lang');
                     display_tooltip(link);
-                }).mouseleave(function (e) {
+                }).mouseleave((e) => {
                     active_judge = active_lang = null;
                     link.removeClass(tooltip_classes).removeAttr('aria-label');
                 });
             });
         }
 
-        var outdated = false;
+        let outdated = false;
 
         function update_table() {
             if ($('body').hasClass('window-hidden'))
                 return outdated = true;
             $.ajax({
-                url: '{{ url('status_table') }}'
-            }).done(function (data) {
+                url: "{{ url('status_table') }}"
+            }).done((data) => {
                 // Readd the tooltip classes to minimize flicker on update
-                var new_node = $(data);
+                const new_node = $(data);
 
                 if (active_lang && active_judge) {
-                    var selected = new_node.find('[data-judge=' + active_judge + '][data-lang=' + active_lang + ']');
+                    const selected = new_node.find('[data-judge=' + active_judge + '][data-lang=' + active_lang + ']');
                     if (selected) // Might have been removed, when a judge disconnected
                         display_tooltip(selected);
                 }
 
                 table.html(new_node);
                 install_tooltips();
-            }).always(function () {
+            }).always(() => {
                 outdated = false;
                 setTimeout(update_table, 10000);
             });
         }
 
-        $(window).on('dmoj:window-visible', function () {
+        $(window).on('dmoj:window-visible', () => {
             if (outdated)
                 update_table();
         });
