--- a/templates/status/oj-status.html
+++ b/templates/status/oj-status.html
@@ -3,24 +3,25 @@
 {% block js_media %}
     {% compress js %}
         {% include "stats/media-js.html" %}
-        <script type="text/javascript" src="{{ static('vnoj/daterangepicker/daterangepicker.min.js') }}"></script>
-        <script type="text/javascript">
-            var by_day_chart = null;
-            var by_language_chart = null;
-            var result_chart = null;
-            var queue_time_chart = null;
-            var org_by_day_chart = null;
+        <script type="module">
+            import "$vnoj/daterangepicker/daterangepicker.min.js";
+
+            let by_day_chart = null;
+            let by_language_chart = null;
+            let result_chart = null;
+            let queue_time_chart = null;
+            let org_by_day_chart = null;
 
             function draw_charts(start_date, end_date) {
                 $.ajax({
-                    url: '{{ url('stats_data_all') }}',
+                    url: "{{ url('stats_data_all') }}",
                     type: 'POST',
                     data: {
                         start_date: start_date.toISOString(),
                         end_date: end_date.toISOString(),
                         utc_offset: moment().utcOffset()
                     },
-                    success: function (stats) {
+                    success(stats) {
                         if (by_day_chart == null) {
                             by_day_chart = draw_vertical_stacked_bar_chart(stats.by_day, $('#by-day'));
                         } else {
@@ -52,14 +53,14 @@
                             org_by_day_chart.update();
                         }
                     },
-                    error: function (data) {
+                    error(data) {
                         console.log('Could not load OJ stats');
                     }
                 });
             }
 
-            $(function () {
-                var date_format = '{{ _('HH:mm:ss MMMM D, YYYY') }}';
+            $(() => {
+                const date_format = "{{ _('HH:mm:ss MMMM D, YYYY') }}";
 
                 function cb(start_date, end_date) {
                     $('#daterange span').html(start_date.format(date_format) + ' - ' + end_date.format(date_format));
@@ -70,26 +71,26 @@
                     timePicker24Hour: true,
                     timePickerSeconds: true,
                     locale: {
-                        customRangeLabel: '{{ _('Custom Range') }}',
-                        applyLabel: '{{ _('Apply') }}',
-                        cancelLabel: '{{ _('Cancel') }}',
-                        fromLabel: '{{ _('From') }}',
-                        toLabel: '{{ _('To') }}'
+                        customRangeLabel: "{{ _('Custom Range') }}",
+                        applyLabel: "{{ _('Apply') }}",
+                        cancelLabel: "{{ _('Cancel') }}",
+                        fromLabel: "{{ _('From') }}",
+                        toLabel: "{{ _('To') }}"
                     },
                     ranges: {
-                        '{{ _('Last Minute') }}': [moment().subtract(1, 'minutes'), moment()],
-                        '{{ _('Last Hour') }}': [moment().subtract(1, 'hours'), moment()],
-                        '{{ _('Today') }}': [moment().startOf('day'), moment().endOf('day')],
-                        '{{ _('Yesterday') }}': [moment().subtract(1, 'days').startOf('day'), moment().subtract(1, 'days').endOf('day')],
-                        '{{ _('Last 7 Days') }}': [moment().subtract(6, 'days').startOf('day'), moment().endOf('day')],
-                        '{{ _('Last 14 Days') }}': [moment().subtract(13, 'days').startOf('day'), moment().endOf('day')],
-                        '{{ _('Last 30 Days') }}': [moment().subtract(29, 'days').startOf('day'), moment().endOf('day')],
-                        '{{ _('Last 60 Days') }}': [moment().subtract(59, 'days').startOf('day'), moment().endOf('day')],
-                        '{{ _('Last 90 Days') }}': [moment().subtract(89, 'days').startOf('day'), moment().endOf('day')]
+                        "{{ _('Last Minute') }}": [moment().subtract(1, 'minutes'), moment()],
+                        "{{ _('Last Hour') }}": [moment().subtract(1, 'hours'), moment()],
+                        "{{ _('Today') }}": [moment().startOf('day'), moment().endOf('day')],
+                        "{{ _('Yesterday') }}": [moment().subtract(1, 'days').startOf('day'), moment().subtract(1, 'days').endOf('day')],
+                        "{{ _('Last 7 Days') }}": [moment().subtract(6, 'days').startOf('day'), moment().endOf('day')],
+                        "{{ _('Last 14 Days') }}": [moment().subtract(13, 'days').startOf('day'), moment().endOf('day')],
+                        "{{ _('Last 30 Days') }}": [moment().subtract(29, 'days').startOf('day'), moment().endOf('day')],
+                        "{{ _('Last 60 Days') }}": [moment().subtract(59, 'days').startOf('day'), moment().endOf('day')],
+                        "{{ _('Last 90 Days') }}": [moment().subtract(89, 'days').startOf('day'), moment().endOf('day')]
                     }
                 }, cb);
 
-                $('#daterange').on('apply.daterangepicker', function(ev, picker) {
+                $('#daterange').on('apply.daterangepicker', (ev, picker) => {
                     draw_charts(picker.startDate, picker.endDate);
                 });
             });
@@ -101,7 +102,7 @@
 {% block media %}
     {% include "status/media-css.html" %}
     {% block content_media %}{% endblock %}
-    <link rel="stylesheet" type="text/css" href="{{ static('vnoj/daterangepicker/daterangepicker.css') }}">
+    <link rel="stylesheet" type="text/css" href="/resources/vnoj/daterangepicker/daterangepicker.css">
 {% endblock %}
 
 {% block title_ruler %}{% endblock %}
