--- a/templates/submission/source.html
+++ b/templates/submission/source.html
@@ -26,11 +26,12 @@
 
 {% block js_media %}
     {% compress js %}
-        <script src="{{ static('libs/clipboard/clipboard.js') }}"></script>
-        <script src="{{ static('libs/clipboard/tooltip.js') }}"></script>
-        <script type="text/javascript">
-            $(function () {
-                $(document).find('pre code').each(function () {
+        <script type="module">
+            import "$prebundled/clipboard/clipboard.js";
+            import "$prebundled/clipboard/tooltip.js";
+
+            $(() => {
+                $(document).find('pre code').each(() => {
                     var copyButton;
                     $(this).closest('.source-wrap').before($('<div>', {'class': 'copy-clipboard'})
                         .append(copyButton = $('<span>', {
@@ -39,19 +40,19 @@
                             'title': 'Click to copy'
                         }).text('Copy')));
 
-                    $(copyButton.get(0)).mouseleave(function () {
+                    $(copyButton.get(0)).mouseleave(() => {
                         $(this).attr('class', 'btn-clipboard');
                         $(this).removeAttr('aria-label');
                     });
 
                     var curClipboard = new Clipboard(copyButton.get(0));
 
-                    curClipboard.on('success', function (e) {
+                    curClipboard.on('success', (e) => {
                         e.clearSelection();
                         showTooltip(e.trigger, 'Copied!');
                     });
 
-                    curClipboard.on('error', function (e) {
+                    curClipboard.on('error', (e) => {
                         showTooltip(e.trigger, fallbackMessage(e.action));
                     });
                 });
