--- a/templates/tag/search-form.html
+++ b/templates/tag/search-form.html
@@ -25,22 +25,22 @@
         </form>
     </div>
     <script>
-        $(function () {
-            var $form = $('form#filter-form');
+        $(() => {
+            const $form = $('form#filter-form');
 
             $('#judges').select2({
                 theme: '{{ DMOJ_SELECT2_THEME }}',
                 multiple: 1,
-                placeholder: '{{ _('Filter by online judge...') }}',
+                placeholder: "{{ _('Filter by online judge...') }}",
             }).css({'visibility': 'visible'});
 
-            $('#go').click(function () {
+            $('#go').click(() => {
                 $form.submit();
             });
 
-            $('#random').click(function (e) {
+            $('#random').click((e) => {
                 var action = $form.attr('action');
-                $form.attr('action', '{{ url('tagproblem_random') }}').attr('target', '_blank').submit();
+                $form.attr('action', "{{ url('tagproblem_random') }}").attr('target', '_blank').submit();
                 $form.attr('action', action).attr('target', '');
                 e.preventDefault();
             });
