--- a/templates/task_status.html
+++ b/templates/task_status.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Task Progress - {{ SITE_LONG_NAME }}</title>
-    <link rel="stylesheet" href="{{ static('task_status.css') }}">
-    <script src="{{ static('libs/jquery-3.4.1.min.js') }}"></script>
-    <script type="text/javascript">
-        $(function () {
-            var $jumbotron = $('.jumbotron');
-            var task_id = $jumbotron.attr('data-task-id');
-            var status = JSON.parse($jumbotron.attr('data-task-status'));
-            var redirect = $jumbotron.attr('data-redirect');
-            var $stage = $jumbotron.find('.stage');
-            var $progress = $jumbotron.find('.progress');
-            var $known = $jumbotron.find('.progress-known');
-            var $known_bar = $known.find('.progress-bar');
-            var $known_text = $known.find('.progress-text');
-            var $fail = $jumbotron.find('.progress-failed');
-            var $fail_text = $fail.find('.progress-bar');
+    <link rel="stylesheet" href="/resources/task_status.css">
+    <script type="module">
+        import $ from "jquery";
+
+        $(() => {
+            const $jumbotron = $('.jumbotron');
+            const task_id = $jumbotron.attr('data-task-id');
+            const status = JSON.parse($jumbotron.attr('data-task-status'));
+            const redirect = $jumbotron.attr('data-redirect');
+            const $stage = $jumbotron.find('.stage');
+            const $progress = $jumbotron.find('.progress');
+            const $known = $jumbotron.find('.progress-known');
+            const $known_bar = $known.find('.progress-bar');
+            const $known_text = $known.find('.progress-text');
+            const $fail = $jumbotron.find('.progress-failed');
+            const $fail_text = $fail.find('.progress-bar');
 
             function show_status(status) {
                 $progress.hide();
@@ -49,18 +50,18 @@
             }
 
             function do_ajax(backoff) {
-                $.get('{{ url('task_status_ajax') }}', {
+                $.get("{{ url('task_status_ajax') }}", {
                     id: task_id
-                }).done(function (data) {
+                }).done((data) => {
                     show_status(data);
                     if (data.code === 'SUCCESS') {
                         window.location.href = redirect;
                     } else if (need_ajax(data)) {
                         setTimeout(do_ajax, 500);
                     }
-                }).fail(function (xhr, status) {
+                }).fail((xhr, status) => {
                     console.log(status);
-                    setTimeout(function () {
+                    setTimeout(() => {
                         do_ajax(backoff * 2);
                     }, backoff);
                 });
@@ -77,7 +78,7 @@
 <div class="container">
     <div class="jumbotron" data-task-id="{{ task_id }}" data-task-status="{{ task_status }}"
          data-redirect="{{ redirect }}">
-        <img src="{{ static('icons/icon.svg') }}" class="icon" alt="DMOJ Icon">
+        <img src="/resources/icons/icon.svg" class="icon" alt="DMOJ Icon">
         <p class="action">{{ message }}</p>
         <p class="stage"></p>
 
