--- a/templates/ticket/list.html
+++ b/templates/ticket/list.html
@@ -3,13 +3,13 @@
 
 {% block js_media %}
     <script type="text/javascript">
-        window.filter_user_ids = {{filter_status.user_id}};
-        window.filter_own_id = {{filter_status.own_id}};
-        window.filter_assignee_ids = {{filter_status.assignee_id}};
+        window.filter_user_ids = JSON.parse("{{ filter_status.user_id }}");
+        window.filter_own_id = JSON.parse("{{ filter_status.own_id }}");
+        window.filter_assignee_ids = JSON.parse("{{ filter_status.assignee_id }}");
     </script>
     <script type="text/javascript">
-        $(function () {
-            $('input#open, input#own').click(function () {
+        $(() => {
+            $('input#open, input#own').click(() => {
                 ($('<form>').attr('action', window.location.pathname + '?' + $('form#filter-form').serialize())
                     .append($('<input>').attr('type', 'hidden').attr('name', 'csrfmiddlewaretoken')
                         .attr('value', $.cookie('csrftoken')))
@@ -18,7 +18,7 @@
 
             register_notify('ticket', {
                 $checkbox: $('#notification'),
-                change: function (enabled) {
+                change: (enabled) => {
                     if (!enabled)
                         for (key in localStorage)
                             if (key.startsWith('ticket:open:'))
@@ -31,14 +31,14 @@
                 return !(key in localStorage) || localStorage[key] == '0';
             }
 
-            var $tbody = $('#ticket-list').find('tbody');
+            const $tbody = $('#ticket-list').find('tbody');
 
             function new_ticket(ticket) {
                 console.log('Fetching data for: ' + ticket.id);
                 $.ajax({
-                    url: '{{ url('ticket_ajax') }}',
+                    url: "{{ url('ticket_ajax') }}",
                     data: {id: ticket.id},
-                    success: function (data) {
+                    success(data) {
                         console.log('Got data for: ' + ticket.id);
                         console.log(data);
                         $tbody.prepend($(data.row));
@@ -46,10 +46,10 @@
                             body: data.notification.body
                         });
                     },
-                    error: function (data) {
-                        if (data.status === 403)
+                    error(data) {
+                        if (data.status === 403) {
                             console.log('No right to see: ' + ticket.id);
-                        else {
+                        } else {
                             console.log('Could not load ticket:');
                             console.log(data.responseText);
                         }
@@ -60,25 +60,25 @@
             function ticket_status(ticket) {
                 if (!main_list_notify(ticket.id)) return;
 
-                var $row = $('#ticket-' + ticket.id);
+                const $row = $('#ticket-' + ticket.id);
                 console.log('Ticket status change: ' + ticket.id);
                 if ($row.length) {
-                    var $status = $row.find('td').first().find('i');
+                    const $status = $row.find('td').first().find('i');
                     if (ticket.open) {
                         $status.removeClass('fa-check-circle-o').addClass('fa-exclamation-circle');
-                        notify('ticket', '{{ _('Reopened: ') }}' + ticket.title);
+                        notify('ticket', "{{ _('Reopened: ') }}" + ticket.title);
                     } else {
                         $status.removeClass('fa-exclamation-circle').addClass('fa-check-circle-o');
-                        notify('ticket', '{{ _('Closed: ') }}' + ticket.title);
+                        notify('ticket', "{{ _('Closed: ') }}" + ticket.title);
                     }
                 }
             }
 
-            window.load_dynamic_update = function () {
-                var $assignees = $(filter_assignee_ids);
+            window.load_dynamic_update = () => {
+                const $assignees = $(filter_assignee_ids);
 
                 event_dispatcher.auto_reconnect = true;
-                event_dispatcher.on('tickets', function (message) {
+                event_dispatcher.on('tickets', (message) => {
                         console.log(message);
                         if (filter_own_id != null && message.user != filter_own_id &&
                             !~message.assignees.indexOf(filter_own_id))
@@ -99,9 +99,9 @@
                 );
             };
 
-            var user_select2 = {
+            const user_select2 = {
                 theme: '{{ DMOJ_SELECT2_THEME }}',
-                templateResult: function (data, container) {
+                templateResult(data, container) {
                     return $('<span>')
                         .append($('<img>', {
                             'class': 'user-search-image', src: data.gravatar_url,
@@ -110,13 +110,13 @@
                         .append($('<span>', {'class': data.display_rank + ' user-search-name'}).text(data.text));
                 },
                 ajax: {
-                    data: function (params) {
+                    data(params) {
                         return {
                             term: params.term || '',
                             page: params.page || 1
                         }
                     },
-                    processResults: function (data) {
+                    processResults(data) {
                         return {
                             results: data.results,
                             pagination: {
@@ -128,15 +128,15 @@
             };
 
             $('#filter-user').select2($.extend(true, {}, user_select2,
-                {ajax: {url: '{{ url('ticket_user_select2_ajax') }}'}}));
+                {ajax: {url: "{{ url('ticket_user_select2_ajax') }}"}}));
             $('#filter-assignee').select2($.extend(true, {}, user_select2,
-                {ajax: {url: '{{ url('ticket_assignee_select2_ajax') }}'}}));
+                {ajax: {url: "{{ url('ticket_assignee_select2_ajax') }}"}}));
         });
     </script>
 
     {% if EVENT_LAST_MSG %}
         <script type="text/javascript">
-            $(function () {
+            $(() => {
                 load_dynamic_update();
             });
         </script>
