--- a/templates/ticket/ticket.html
+++ b/templates/ticket/ticket.html
@@ -5,7 +5,7 @@
     {{ form.media.js }}
     <script src="{{ static('libs/featherlight/featherlight.min.js') }}" type="text/javascript"></script>
     <script type="text/javascript">
-        $(function () {
+        $(() => {
             var $h2 = $('#content').find('> h2:first-child');
             var $vote_status = $h2.find('.vote-status i'), $status = $h2.find('.status i'), $title = $h2.find('.title');
 
@@ -27,37 +27,37 @@
                 $('.vote-good').toggle(!contributive);
             }
 
-            $('.close-ticket, .open-ticket').click(function () {
+            $('.close-ticket, .open-ticket').click(() => {
                 var open = $(this).attr('data-open') == '1';
                 $.ajax({
                     url: $(this).attr('data-ajax'), type: 'POST',
-                    success: function () {
+                    success() {
                         update_ticket_state(open);
                     },
-                    error: function (data) {
-                        alert('{{ _('Could not change ticket: {error}') }}'.replace('{error}', data.responseText));
+                    error(data) {
+                        alert("{{ _('Could not change ticket: {error}') }}".replace('{error}', data.responseText));
                     }
                 });
             });
 
-            $('.vote-good, .vote-norm').click(function () {
-                var contributive = $(this).attr('data-contributive') == '1';
+            $('.vote-good, .vote-norm').click(() => {
+                const contributive = $(this).attr('data-contributive') == '1';
                 $.ajax({
                     url: $(this).attr('data-ajax'), type: 'POST',
-                    success: function () {
+                    success: () => {
                         update_ticket_vote(contributive);
                     },
-                    error: function (data) {
+                    error: (data) => {
                         alert('Could not change ticket: ' + data.responseText);
                     }
                 });
             });
 
             $('.edit-notes').featherlight({
-                afterOpen: function () {
-                    var $form = $('#edit-notes');
-                    $form.find('.submit').click(function () {
-                        $.post($form.attr('action'), $form.serialize()).done(function (data) {
+                afterOpen: () => {
+                    const $form = $('#edit-notes');
+                    $form.find('.submit').click(() => {
+                        $.post($form.attr('action'), $form.serialize()).done((data) => {
                             $('#ticket-notes').find('.info-empty').toggle(!data).end().find('.info-real').html(data);
                             $.featherlight.current().close();
                         });
@@ -66,8 +66,8 @@
                 }
             });
 
-            var page_ref_key = 'ticket:open:{{ ticket.id }}', page_close_key = page_ref_key + ':close';
-            var page_ref;
+            let page_ref_key = 'ticket:open:{{ ticket.id }}', page_close_key = page_ref_key + ':close';
+            let page_ref;
 
             function increase_page_ref() {
                 if (page_ref_key in localStorage)
@@ -92,7 +92,7 @@
                 return true;
             }
 
-            $(window).on('storage', function (e) {
+            $(window).on('storage', (e) => {
                 e = e.originalEvent;
                 if (e.key == page_close_key && e.newValue !== null)
                     if (page_ref != null && page_ref > +e.newValue)
@@ -100,34 +100,34 @@
             });
 
             register_notify('ticket', {
-                change: function (enabled) {
+                change(enabled) {
                     if (enabled)
                         increase_page_ref();
                 }
             });
 
-            $(window).on('beforeunload', function () {
+            $(window).on('beforeunload', () => {
                 decrease_page_ref();
             });
 
             function ticket_status(ticket) {
                 update_ticket_state(ticket.open);
                 if (is_highest_ref())
-                    notify('ticket', (ticket.open ? '{{ _('Reopened: ') }}' :
-                        '{{ _('Closed: ') }}') + $title.text());
+                    notify('ticket', (ticket.open ? "{{ _('Reopened: ') }}" :
+                        "{{ _('Closed: ') }}") + $title.text());
             }
 
             function ticket_message(ticket) {
                 console.log('Fetching data for: ' + ticket.message);
                 $.ajax({
-                    url: '{{ url('ticket_message_ajax', ticket.id) }}',
+                    url: "{{ url('ticket_message_ajax', ticket.id) }}",
                     data: {message: ticket.message},
-                    success: function (data) {
+                    success(data) {
                         console.log('Got data for: ' + ticket.message);
                         console.log(data);
                         $('#messages').append($(data.message));
                     },
-                    error: function (data) {
+                    error(data) {
                         if (data.status === 403)
                             console.log('No right to see: ' + ticket.message);
                         else {
@@ -138,9 +138,9 @@
                 });
             }
 
-            window.load_dynamic_update = function () {
+            window.load_dynamic_update = () => {
                 event_dispatcher.auto_reconnect = true;
-                event_dispatcher.on('ticket-{{ ticket.id }}', function (message) {
+                event_dispatcher.on('ticket-{{ ticket.id }}', (message) => {
                         console.log(message);
                         switch (message.type) {
                             case 'ticket-status':
@@ -158,7 +158,7 @@
 
     {% if EVENT_LAST_MSG %}
         <script type="text/javascript">
-            $(function () {
+            $(() => {
                 load_dynamic_update();
             });
         </script>
