--- a/templates/timezone/media-css.html
+++ b/templates/timezone/media-css.html
@@ -1,9 +1,9 @@
 {% compress css %}
-    <link rel="stylesheet" href="{{ static('libs/timezone-map/timezone-map.css') }}">
+    <link rel="stylesheet" href="/resources/prebundled/timezone-map/timezone-map.css">
     <style>
-        .map-inset {
+        /* .map-inset {
             background: url('{{ TIMEZONE_MAP }}') 50% 50%
-        }
+        } */
 
         .map-wrap {
             display: none
