--- a/templates/timezone/media-js.html
+++ b/templates/timezone/media-js.html
@@ -1,12 +1,14 @@
 {% compress js %}
-    <script src="{{ static('libs/featherlight/featherlight.min.js') }}" type="text/javascript"></script>
-    <script type="text/javascript" src="{{ static('libs/timezone-map/timezone-picker.js') }}"></script>
-    <script type="text/javascript">
-        $(function () {
+    <script type="module">
+        import "$prebundled/featherlight/featherlight.min.js";
+        import "$prebundled/timezone-map/timezone-picker.js";
+
+        import timezonePickerJson from "$prebundled/timezone-map/timezone-picker.json";
+
+        $(() => {
             $('#open-map').featherlight({
-                afterOpen: function () {
-                    timezone_picker($('.featherlight-inner .map-inset'), $('#id_timezone'),
-                        '{{ static('libs/timezone-map/timezone-picker.json') }}');
+                afterOpen() {
+                    timezone_picker($('.featherlight-inner .map-inset'), $('#id_timezone'), timezonePickerJson);
                 }
             });
         });
