--- a/templates/user/contrib-list.html
+++ b/templates/user/contrib-list.html
@@ -3,21 +3,21 @@
 {% block js_media %}
     {% block users_js_media %}{% endblock %}
     <script>
-        $(function () {
+        $(() => {
             $('#search-handle').replaceWith($('<select>').attr({
                 id: 'search-handle',
                 name: 'handle',
                 onchange: 'form.submit()'
             }));
-            var in_user_redirect = false;
+            let in_user_redirect = false;
             $('#search-handle').select2({
                 theme: '{{ DMOJ_SELECT2_THEME }}',
-                placeholder: '{{ _('Search by handle...') }}',
+                placeholder: "{{ _('Search by handle...') }}",
                 ajax: {
-                    url: '{{ url('user_search_select2_ajax') }}'
+                    url: "{{ url('user_search_select2_ajax') }}"
                 },
                 minimumInputLength: 1,
-                templateResult: function (data, container) {
+                templateResult(data, container) {
                     return $('<span>')
                         .append($('<img>', {
                             'class': 'user-search-image', src: data.gravatar_url,
@@ -26,21 +26,21 @@
                         .append($('<span>', {'class': data.display_rank + ' user-search-name'}).text(data.text))
                         .append($('<a>', {href: '/user/' + data.text, 'class': 'user-redirect'})
                             .append($('<i>', {'class': 'fa fa-mail-forward'}))
-                            .mouseover(function () {
+                            .mouseover(() => {
                                 in_user_redirect = true;
-                            }).mouseout(function () {
+                            }).mouseout(() => {
                                 in_user_redirect = false;
                             }));
                 }
-            }).on('select2:selecting', function () {
+            }).on('select2:selecting', () => {
                 return !in_user_redirect;
             });
 
-            var $last = null;
-            $(window).on('hashchange', function () {
-                var hash = window.location.hash;
+            let $last = null;
+            $(window).on('hashchange', () => {
+                const hash = window.location.hash;
                 if (hash.startsWith('#!')) {
-                    var $user = $('#user-' + hash.substring(2)).addClass('highlight');
+                    const $user = $('#user-' + hash.substring(2)).addClass('highlight');
                     if ($user) {
                         $(document).scrollTop($user.position().top - 50);
                         if ($last !== null) $last.removeClass('highlight');
