--- a/templates/user/user-about.html
+++ b/templates/user/user-about.html
@@ -140,37 +140,38 @@
         {% include "mathjax-load.html" %}
     {% endif %}
 
-    <script type="text/javascript" src="{{ static('user_profile.js') }}"></script>
+    <script type="text/javascript" src="/resources/user_profile.js"></script>
     <script type="text/javascript">
-        $(function () {
-            window.init_submission_table($, {{ submission_data }}, {{ submission_metadata }}, "{{ LANGUAGE_CODE }}");
+        $(() => {
+            window.init_submission_table($, JSON.parse("{{ submission_data }}"), JSON.parse("{{ submission_metadata }}"), "{{ LANGUAGE_CODE }}");
         });
     </script>
 
     {% if ratings %}
-        <script type="text/javascript" src="{{ static('libs/chart.js/Chart.js') }}"></script>
-        <script type="text/javascript">
-            var rating_history = {{ rating_data }};
+        <script type="module">
+            import "$prebundled/chart.js/Chart.js";
 
-            $.each(rating_history, function (index, item) {
+            const rating_history = JSON.parse("{{ rating_data }}");
+
+            $.each(rating_history, (index, item) => {
                 item.x = new Date(item.timestamp);
                 item.y = item.rating;
             });
 
-            $(function () {
-                var $canvas = $('#rating-chart').find('canvas');
-                var ctx = $canvas.get(0).getContext('2d');
+            $(() => {
+                const $canvas = $('#rating-chart').find('canvas');
+                const ctx = $canvas.get(0).getContext('2d');
 
-                var getItem = function (index) {
+                const getItem = (index) => {
                     return rating_history[index];
                 };
-                var ratings = rating_history.map(function (x) {
+                const ratings = rating_history.map((x) => {
                     return x.rating;
                 });
 
-                var originalDraw = Chart.controllers.scatter.prototype.draw;
+                const originalDraw = Chart.controllers.scatter.prototype.draw;
                 Chart.helpers.extend(Chart.controllers.scatter.prototype, {
-                    draw: function () {
+                    draw: () => {
                         var chart = this.chart;
                         var yHighlight = chart.config.options.yHighlight;
 
@@ -255,16 +256,16 @@
                         },
                         tooltips: {
                             enabled: false,
-                            custom: function (tooltipModel) {
-                                var $tooltip = $('#rating-tooltip');
+                            custom(tooltipModel) {
+                                const $tooltip = $('#rating-tooltip');
 
                                 if (tooltipModel.opacity == 0) {
                                     $tooltip.hide();
                                     return;
                                 }
 
-                                var element = tooltipModel.dataPoints[0]
-                                var item = getItem(element.index);
+                                const element = tooltipModel.dataPoints[0]
+                                const item = getItem(element.index);
 
                                 $tooltip.find('.contest').text(item.label);
                                 $tooltip.find('.date').text(item.date);
@@ -276,8 +277,8 @@
                                 $tooltip.removeClass('above below');
                                 $tooltip.addClass(element.y < $tooltip.height() ? 'below' : 'above');
 
-                                var position = $canvas.offset();
-                                var container = $('#page-container').offset();
+                                const position = $canvas.offset();
+                                const container = $('#page-container').offset();
                                 $tooltip.css({
                                     left: position.left - container.left + element.x + $tooltip.width() / 2,
                                     top: position.top - container.top + element.y - $tooltip.height() - 13,
@@ -342,16 +343,16 @@
                     }
                 });
 
-                $canvas.click(function (evt) {
-                    var elements = window.rating_chart.getElementsAtEvent(evt);
+                $canvas.click((evt) => {
+                    const elements = window.rating_chart.getElementsAtEvent(evt);
                     if (elements.length > 0) {
-                        var item = getItem(elements[0]._index);
+                        const item = getItem(elements[0]._index);
                         window.location.href = item.link;
                     }
                 });
 
-                $canvas.mousemove(function (evt) {
-                    var elements = window.rating_chart.getElementsAtEvent(evt);
+                $canvas.mousemove((evt) => {
+                    const elements = window.rating_chart.getElementsAtEvent(evt);
                     if (elements.length > 0) {
                         $canvas.css('cursor', 'pointer');
                     } else {
