--- a/templates/user/user-problems.html
+++ b/templates/user/user-problems.html
@@ -4,15 +4,15 @@
     <script type="text/javascript">
         window.show_pp_base = 1;
         window.currently_requesting_pp = false;
-        window.load_more_pp = function () {
+        window.load_more_pp = () => {
             if (window.currently_requesting_pp) return;
             window.currently_requesting_pp = true;
 
-            $.get('{{ url('user_pp_ajax', user.user.username) }}', {
+            $.get("{{ url('user_pp_ajax', user.user.username) }}", {
                 start: window.show_pp_base * 10,
                 end: (window.show_pp_base + 1) * 10
-            }).done(function (data) {
-                var results = $(data['results']);
+            }).done((data) => {
+                const results = $(data['results']);
                 $('.pp-table').append(results);
                 register_time(results.find('.time-with-rel'));
                 window.show_pp_base++;
